--- a/package.json
+++ b/package.json
@@ -11,11 +11,16 @@
     "axios": "^0.19.2",
     "babel-plugin-import": "^1.13.0",
     "core-js": "^3.6.4",
+    "crypto-js": "^4.0.0",
     "egg": "^2.15.1",
     "egg-cors": "^2.2.3",
+    "egg-jwt": "^3.1.7",
+    "egg-mysql": "^3.0.0",
     "egg-scripts": "^2.11.0",
+    "jsonwebtoken": "^8.5.1",
     "less": "^3.11.1",
     "less-loader": "^5.0.0",
+    "moment": "^2.25.1",
     "vue": "^2.6.11",
     "vue-axios": "^2.1.5",
     "vue-router": "^3.1.6"
